Final cleanup of unused code and deprecated code